--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -713,19 +713,16 @@ main {
 }
 
 .clients-head {
-    /* Other styles... */
-    margin-top: 15px; /* or reduce this value as needed */
-    margin-bottom: 0px !important; /* reduce the bottom margin */
+    margin-top: 15px;
+    margin-bottom: 0px !important;
 }
 
 .clients-list {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-    margin: 0 -1px; /* Adjust if needed */
+    margin: 0 -1px;
     padding: 2px;
-    padding-bottom: 2px;
-    padding-top: !important;
     overflow-x: auto;
     scroll-behavior: smooth;
     overscroll-behavior-inline: contain;
@@ -735,32 +732,52 @@ main {
 }
 
 .clients-item {
-    /*flex: 0 0 auto; /* Don't grow, don't shrink, basis is auto */
-    /*display: flex;*/
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    margin-right: 15px; /* Consistent right margin for each item */
-    height: 350px; /* Fixed height for container */
+    margin-right: 15px;
 }
 
-
 .clients-item:last-child {
-    margin-right: 0; /* Remove right margin for the last item */
+    margin-right: 0;
 }
 
 .clients-item img {
-    height: 375px; /* Image takes full height of the container */
-    width: 150px; /* Width adjusts according to aspect ratio */
-    object-fit: contain; /* Maintain aspect ratio without cropping */
-    object-position: center; /* Center the image within the item */
-    filter: grayscale(1);
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    object-position: center;
     transition: var(--transition-1);
 }
 
-.clients-item img:hover {
-    filter: grayscale(0);
+.brighten img {
+    -webkit-filter: brightness(50%);
+    filter: brightness(50%);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
 }
+
+    .brighten img:hover {
+        -webkit-filter: brightness(100%);
+        filter: brightness(100%);
+    }
+
+/* Add media query for mobile responsiveness */
+@media (max-width: 600px) {
+    .clients-item {
+        flex: 0 0 90%;
+        margin-right: 10px;
+    }
+
+    .clients-item img {
+        width: 100%;
+        height: auto;
+    }
+}
+
 
 /*-----------------------------------*\
   #EXPERIENCE
